# Fast-dLLM

./: .gitignore  CLAUDE.md
llada/: eval_llada.py
v2/: copy_summaries.sh  eval.py  eval_gsm8k_reuse_activations.sh  eval_gsm8k_reuse_layers.sh  generation_functions.py  layer_reuse.py  log_utils.py  pyproject.toml  setup_tmpdir_venv.sh
v2/docs/: EXPERIMENTS_STATUS.md  README.md  STATUS.md  operations.md  results.md
v2/docs/_templates/: concept.md  experiment-proposal.md  experiment-result.md  reference.md
v2/docs/concepts/: README.md
v2/docs/experiments/: 00-layer-reuse-loglikelihood.md  01-gpqa-authentication.md  02-missing-throughput-tracking.md  README.md  gpqa-authentication.md  layer-reuse-loglikelihood.md  missing-throughput-tracking.md  tasks.md
v2/docs/pace/: 01-informational-commands.md  02-job-accounting.md  03-qos-policies.md  04-interactive-jobs.md  08-gpu-jobs.md  10-amd-cpu-jobs.md
v2/docs/reference/: pace-cluster.md
v2/docs/references/: pace-cluster.md
v2/experiments/00_baseline/: .tasks.md.swp  README.md  config.yaml  generation_functions.py  proposal.md  results.md  tasks.md
v2/results/: gsm8k_threshold1_run_20251102-062539.json  gsm8k_threshold1_run_20251103-041901.json  gsm8k_threshold1_run_20251103-051122.json
v2/sbatch/: _array.sh  _job.sh  baseline.sh  common.sh  eval_gsm8k.sh  eval_gsm8k_reuse_activations.sh  eval_gsm8k_reuse_layers.sh  eval_pace_script.sbatch  eval_pace_script.sh  eval_reuse_layers_array.sbatch  eval_reuse_layers_array.sh  eval_reuse_single.sh  eval_script.sh  local.sh  run.sh  run_reuse_experiments.sh
(+74 files in other folders)
