[build-system]
requires = ["setuptools >= 64"]
build-backend = "setuptools.build_meta"

[project]
name = "fast-dllm-v2"
version = "0.1.0"
description = "Fast-dLLM v2 with block-diffusion, layer reuse, and TRIM logic"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "transformers>=4.44.0",
    "lm_eval>=0.4.8",
    "accelerate>=0.33.0",
    "peft>=0.11.0",
    "huggingface_hub>=0.24.0",
    "einops",
    "hf_transfer",
    "antlr4-python3-runtime==4.11",
    "math_verify",
    "sympy",
    "hf_xet",
    "pydantic>=2.10.6",
    "gradio",
    "langdetect",
    "immutabledict",
]

[tool.ruff]
target-version = "py39"
indent-width = 4

[tool.ruff.lint.isort]
lines-after-imports = 2
known-first-party = ["lmflow"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
skip-magic-trailing-comma = false
line-ending = "auto"
